WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203108
Don't put pages that have not reached the non-visually empty layout milestone in the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203108
Summary
Don't put pages that have not reached the non-visually empty layout milestone...
Chris Dumez
Reported
2019-10-17 10:04:51 PDT
Don't put pages that have not reached the non-visually empty layout milestone in the back/forward cache.
Attachments
Patch
(3.24 KB, patch)
2019-10-17 10:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.81 KB, patch)
2019-10-17 21:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-10-17 10:32:15 PDT
Created
attachment 381201
[details]
Patch
Geoffrey Garen
Comment 2
2019-10-17 10:36:17 PDT
Comment on
attachment 381201
[details]
Patch r=me
Radar WebKit Bug Importer
Comment 3
2019-10-17 10:36:27 PDT
<
rdar://problem/56375671
>
WebKit Commit Bot
Comment 4
2019-10-17 13:30:52 PDT
The commit-queue encountered the following flaky tests while processing
attachment 381201
[details]
: fetch/fetch-worker-crash.html
bug 187257
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-10-17 13:31:43 PDT
Comment on
attachment 381201
[details]
Patch Clearing flags on attachment: 381201 Committed
r251255
: <
https://trac.webkit.org/changeset/251255
>
WebKit Commit Bot
Comment 6
2019-10-17 13:31:45 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 7
2019-10-17 16:42:16 PDT
Reverted
r251255
for reason: This is causing the existing back/forward tests to be flaky Committed
r251267
: <
https://trac.webkit.org/changeset/251267
>
Chris Dumez
Comment 8
2019-10-17 21:05:19 PDT
Created
attachment 381265
[details]
Patch
WebKit Commit Bot
Comment 9
2019-10-17 22:01:57 PDT
Comment on
attachment 381265
[details]
Patch Clearing flags on attachment: 381265 Committed
r251275
: <
https://trac.webkit.org/changeset/251275
>
WebKit Commit Bot
Comment 10
2019-10-17 22:01:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug