Don't put pages that have not reached the non-visually empty layout milestone in the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203108

Reviewed by Geoffrey Garen.

We don't want to go back to a visually empty page on back/forward navigation.

* history/BackForwardCache.cpp:
(WebCore::canCacheFrame):
* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::visuallyEmptyKey):
* page/DiagnosticLoggingKeys.h:


Canonical link: https://commits.webkit.org/216521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251255 268f45cc-cd09-0410-ab3c-d52691b4dbfc